components: gridproducts,hotcategory,slider; edit file header, install slider-slick library

--- a/src/pages/homeuser/Brand/Brand.scss
+++ b/src/pages/homeuser/Brand/Brand.scss
@@ -1,7 +1,7 @@
 .brand-container {
     max-width: 80vw;
     height: 70px;
-    margin: 90px auto;
+    margin: 90px auto 0;
     border: 1px solid;
 
     .brand-content {
