--- a/src/layout/HomeLayout/Header/Header.scss
+++ b/src/layout/HomeLayout/Header/Header.scss
@@ -19,17 +19,19 @@
         .top-header {
             width: 100%;
             height: 59px;
-            padding-bottom: 5px;
             margin-bottom: 30px;
             display: flex;
-            align-items: center;
+            align-items: flex-start;
             justify-content: space-between;
             border-bottom: 1px solid;
+            padding-top: 0;
 
             .search-box {
                 width: 220px;
-                height: 100%;
+                height: 15px;
                 border: 1px solid;
+                display: flex;
+                align-items: center;
 
                 &:hover {
                     cursor: pointer;
@@ -38,7 +40,7 @@
 
             .logo {
                 width: 180px;
-                height: 100%;
+                height: 34px;
                 border: 1px solid;
 
                 &:hover {
@@ -48,7 +50,7 @@
 
             .util {
                 width: 220px;
-                height: 100%;
+                height: 24px;
                 display: flex;
                 justify-content: space-between;
                 border: 1px solid;
