--- a/src/pages/homeuser/BrandBanner/BrandBanner.scss
+++ b/src/pages/homeuser/BrandBanner/BrandBanner.scss
@@ -72,6 +72,7 @@
                         border: none;
                         outline: none;
                         width: 245px;
+                        cursor: pointer;
 
                         background: #FFFFFF;
 
