--- a/src/pages/homeuser/SliderProducts/SliderProducts.scss
+++ b/src/pages/homeuser/SliderProducts/SliderProducts.scss
@@ -43,7 +43,7 @@
                 border: 1px solid;
                 justify-content: space-between;
 
-                .tablinks {
+                .slider-tablinks {
                     border: none;
                     outline: none;
                     background: transparent;
@@ -96,7 +96,7 @@
             margin-top: 30px;
             border: 1px solid;
 
-            .tabcontent {
+            .slider-tabcontent {
                 width: 100%;
                 height: 100%;
                 -webkit-animation: fadeEffect 1s;
