--- a/src/layout/HomeLayout/Header/Header.scss
+++ b/src/layout/HomeLayout/Header/Header.scss
@@ -1,6 +1,6 @@
 .container {
     max-width: 80vw;
-    height: 113px;
+    height: fit-content;
     position: absolute;
     top: 31px;
     margin-left: auto;
@@ -18,16 +18,16 @@
 
         .top-header {
             width: 100%;
-            height: 59px;
+            // height: 59px;
             margin-bottom: 30px;
             display: flex;
-            align-items: flex-start;
+            // align-items: flex-start;
             justify-content: space-between;
             border-bottom: 1px solid;
             padding-top: 0;
 
             .search-box {
-                width: 220px;
+                // width: 220px;
                 height: 15px;
                 border: 1px solid;
                 display: flex;
@@ -82,18 +82,32 @@
         }
 
         .bot-header {
-            height: 24px;
+            height: fit-content;
 
             .nav-container {
+                height: 100%;
+                width: 100%;
 
                 .nav-content {
+                    height: 100%;
+                    width: 100%;
                     display: flex;
+                    overflow-x: 'auto';
                     justify-content: space-between;
 
                     .link {
+                        flex-shrink: 0;
+
                         text-decoration: none;
-                        color: #000;
+                        font-family: 'Poppins';
+                        font-style: normal;
+                        font-weight: 400;
+                        font-size: 11px;
                         line-height: 24px;
+                        /* identical to box height, or 150% */
+
+
+                        color: #000000;
 
                         &:hover {
                             border-bottom: 1px solid;
@@ -101,6 +115,65 @@
                     }
                 }
             }
+        }
+    }
+}
+
+//mobile
+@media only screen and (min-width: 320px) and (max-width: 480px) {
+    .top-header {
+        height: 100px;
+        flex-direction: column;
+        align-items: center;
+
+        .search-box {
+            width: 15px
+        }
+    }
+}
+
+//tablet
+@media only screen and (min-width: 481px) and (max-width: 768px) {
+    .top-header {
+        height: 100px;
+        flex-direction: column;
+        align-items: center;
+
+        .search-box {
+            width: 15px
+        }
+    }
+}
+
+//laptop
+@media only screen and (min-width: 769px) and (max-width: 1023px) {
+    .top-header {
+        height: 59px;
+
+        .search-box {
+            width: 220px
+        }
+    }
+}
+
+//desktop
+@media only screen and (min-width: 1024px) and (max-width: 1200px) {
+    .top-header {
+        height: 59px;
+
+        .search-box {
+            width: 220px
+        }
+    }
+}
+
+//extra
+@media only screen and (min-width: 1201px) {
+    .top-header {
+        height: 59px;
+
+        .search-box {
+            width: 220px
         }
     }
 }
