--- a/src/layout/HomeLayout/TopMain/TopMain.scss
+++ b/src/layout/HomeLayout/TopMain/TopMain.scss
@@ -1,6 +1,6 @@
 .topmain-container {
     width: 100%;
-    height: 847px;
+    height: fit-content;
     margin: 0;
     background: #F1F1F1;
     border: 1px solid;
@@ -12,28 +12,25 @@
 
         .topmain-product {
             width: 80vw;
-            height: 562px;
-            margin: 225px auto 0;
             display: flex;
             border: 1px solid;
             align-items: center;
             justify-content: space-between;
 
             .topmain-left {
-                width: 55%;
-                height: 364px;
+                min-height: 364px;
                 display: flex;
                 border: 1px solid;
                 flex-direction: column;
                 justify-content: space-between;
 
                 .title {
-                    width: 360px;
+                    // width: 360px;
                     height: 55px;
                     font-family: 'Roboto';
                     font-style: normal;
                     font-weight: 300;
-                    font-size: 74px;
+                    // font-size: 74px;
                     line-height: 55px;
                 }
 
@@ -43,7 +40,7 @@
                     font-family: 'Roboto';
                     font-style: normal;
                     font-weight: 400;
-                    font-size: 30px;
+                    // font-size: 30px;
                     line-height: 55px;
                     /* or 183% */
                     text-transform: capitalize;
@@ -74,20 +71,20 @@
             }
 
             .topmain-right {
-                width: 40%;
-                height: 562px;
+                // width: 40%;
+                // height: 562px;
                 border: 1px solid;
 
-                &:after {
-                    content: "";
-                    width: 100%;
-                    height: 100%;
-                    border-radius: 160px 0px;
-                    border: 2px solid #AFAFAF;
-                    display: block;
-                    margin-left: 5%;
-                    margin-top: -135%;
-                }
+                // &:after {
+                //     content: "";
+                //     // width: 100%;
+                //     // height: 100%;
+                //     border-radius: 160px 0px;
+                //     border: 2px solid #AFAFAF;
+                //     display: block;
+                //     margin-left: 5%;
+                //     margin-top: -135%;
+                // }
 
                 img {
                     width: 100%;
@@ -95,6 +92,150 @@
                     border-radius: 160px 0px;
                 }
             }
+        }
+    }
+}
+
+//mobile
+@media only screen and (min-width: 320px) and (max-width: 480px) {
+    .topmain-product {
+        height: 724px;
+        margin: 347px auto 0;
+
+        flex-direction: column;
+
+        .topmain-left {
+            width: 100%;
+            align-items: center;
+
+            .title {
+                width: 100%;
+                text-align: center;
+                font-size: 55px;
+            }
+
+            .description {
+                text-align: center;
+                font-size: 25px;
+            }
+        }
+
+        .topmain-right {
+            height: 350px;
+        }
+    }
+}
+
+//tablet
+@media only screen and (min-width: 481px) and (max-width: 768px) {
+    .topmain-product {
+        height: 724px;
+        margin: 347px auto 0;
+        flex-direction: column;
+
+        .topmain-left {
+            width: 100%;
+            align-items: center;
+
+            .title {
+                width: 100%;
+                text-align: center;
+                font-size: 55px;
+            }
+
+            .description {
+                width: 100%;
+                text-align: center;
+                font-size: 25px;
+            }
+        }
+
+        .topmain-right {
+            height: 350px;
+        }
+    }
+}
+
+//laptop
+@media only screen and (min-width: 769px) and (max-width: 1023px) {
+    .topmain-product {
+        height: 724px;
+        margin: 347px auto 0;
+        flex-direction: column;
+
+        .topmain-left {
+            width: 100%;
+            align-items: center;
+
+            .title {
+                width: 100%;
+                text-align: center;
+                font-size: 55px;
+            }
+
+            .description {
+                width: 100%;
+                text-align: center;
+                font-size: 25px;
+            }
+        }
+
+        .topmain-right {
+            height: 350px;
+        }
+    }
+}
+
+//desktop
+@media only screen and (min-width: 1024px) and (max-width: 1200px) {
+    .topmain-product {
+        margin: 227px auto 0;
+        flex-direction: row;
+
+        .topmain-left {
+            width: 50%;
+
+            .title {
+                width: 100%;
+                font-size: 74px;
+            }
+
+            .description {
+                width: 100%;
+                font-size: 30px;
+            }
+        }
+
+        .topmain-right {
+            width: 50%;
+            height: 542px;
+        }
+    }
+}
+
+//extra
+@media only screen and (min-width: 1201px) {
+    .topmain-product {
+        margin: 227px auto 0;
+        flex-direction: row;
+
+        .topmain-left {
+            width: 686px;
+
+            .title {
+                width: 100%;
+                font-size: 74px;
+            }
+
+            .description {
+                width: 100%;
+                font-size: 30px;
+            }
+        }
+
+        .topmain-right {
+            width: 442px;
+            height: 562px;
         }
     }
 }
