--- a/src/layout/HomeLayout/Footer/Footer.scss
+++ b/src/layout/HomeLayout/Footer/Footer.scss
@@ -1,8 +1,8 @@
 .footer-container {
     width: 100%;
-    height: 355px;
+    min-height: 355px;
     margin-top: 140px;
-    border: 1px solid;
+
 
     .footer-content {
         width: 100%;
@@ -10,20 +10,20 @@
 
         .top-footer {
             width: 90vw;
-            height: 213px;
+            min-height: 213px;
             margin: 0 auto;
-            border: 1px solid;
+
 
             .footer-left {
-                width: 367px;
-                height: 197px;
+                max-width: 367px;
+                min-height: 197px;
                 display: flex;
                 flex-direction: column;
                 align-items: flex-start;
                 justify-content: space-between;
 
                 .footer-logo {
-                    width: 180px;
+                    max-width: 180px;
                     height: 34px;
 
                     img {
@@ -33,8 +33,8 @@
                 }
 
                 .footer-title {
-                    width: 367px;
-                    height: 78px;
+                    max-width: 367px;
+                    min-height: 78px;
 
                     font-family: 'Open Sans';
                     font-style: normal;
@@ -47,8 +47,8 @@
                 }
 
                 .footer-social {
-                    width: 172px;
-                    height: 16px;
+                    max-width: 172px;
+                    min-height: 16px;
                     display: flex;
                     align-items: center;
                     justify-content: space-between;
@@ -59,7 +59,7 @@
             }
 
             .footer-menu {
-                height: 212px;
+                min-height: 212px;
                 display: flex;
                 flex-direction: column;
                 justify-content: space-between;
@@ -122,7 +122,7 @@
 
         .bottom-footer {
             width: 100%;
-            height: 52px;
+            min-height: 52px;
             margin-top: 90px;
             background: #1E2832;
             display: flex;
@@ -190,5 +190,13 @@
                 }
             }
         }
+    }
+}
+
+
+//mobile
+@media only screen and (min-width: 320px) and (max-width: 480px) {
+    .bottom-footer {
+        flex-direction: column;
     }
 }
