--- a/src/pages/homeuser/GridProducts/GridProducts.scss
+++ b/src/pages/homeuser/GridProducts/GridProducts.scss
@@ -2,18 +2,18 @@
     width: 90vw;
     height: 1055px;
     margin: 140px auto 0;
-    border: 1px solid;
+
 
     .grid-products-content {
         width: 100%;
         height: 100%;
-        border: 1px solid;
+
 
         .grid-products-title {
-            width: 332px;
+            max-width: 332px;
             height: 53px;
             margin: 0 auto 40px;
-            border: 1px solid;
+
 
             font-family: 'Roboto';
             font-style: normal;
@@ -29,18 +29,18 @@
 
         .grid-products-top {
             width: 100%;
-            height: 32px;
+            min-height: 32px;
             margin-top: 40px;
             display: flex;
-            border: 1px solid;
-            align-items: center;
+
+            // align-items: center;
             justify-content: space-between;
 
             .tabs {
-                width: 375px;
+                max-width: 375px;
                 height: 22px;
                 display: flex;
-                border: 1px solid;
+
                 justify-content: space-between;
 
                 .tablinks {
@@ -51,7 +51,7 @@
                     font-family: "Open Sans";
                     font-style: normal;
                     font-weight: 600;
-                    font-size: 16px;
+                    font-size: 15px;
                     line-height: 22px;
                     text-transform: capitalize;
                     color: #777777;
@@ -93,7 +93,7 @@
             width: 100%;
             height: 900px;
             margin-top: 30px;
-            border: 1px solid;
+
 
             .tabcontent {
                 width: 100%;
@@ -113,8 +113,8 @@
 
                     .card-product {
                         max-width: 480px;
-                        height: 438px;
-                        border: 1px solid;
+                        height: 420px;
+
 
                         .img-product {
                             position: relative;
@@ -303,5 +303,45 @@
         to {
             bottom: 0;
         }
+    }
+}
+
+//mobile
+@media only screen and (min-width: 320px) and (max-width: 480px) {
+    .grid-products-title {
+        width: 100%;
+        font-size: 45px;
+    }
+
+    .grid-products-top {
+        flex-direction: column;
+    }
+}
+
+//tablet
+@media only screen and (min-width: 481px) and (max-width: 768px) {
+    .grid-products-top {
+        align-items: center;
+    }
+}
+
+//laptop
+@media only screen and (min-width: 769px) and (max-width: 1023px) {
+    .grid-products-top {
+        align-items: center;
+    }
+}
+
+//desktop
+@media only screen and (min-width: 1024px) and (max-width: 1200px) {
+    .grid-products-top {
+        align-items: center;
+    }
+}
+
+//extra
+@media only screen and (min-width: 1201px) {
+    .grid-products-top {
+        align-items: center;
     }
 }
