--- a/src/pages/homeuser/NewsLetter/NewsLetter.scss
+++ b/src/pages/homeuser/NewsLetter/NewsLetter.scss
@@ -1,23 +1,23 @@
 .news-container {
     width: 100%;
-    height: 748px;
+    min-height: 748px;
     background: #F1F1F1;
     margin-top: 140px;
-    border: 1px solid;
+
 
     .news-content {
         width: 90vw;
-        height: 518px;
+        min-height: 518px;
         margin: 100px auto;
-        border: 1px solid;
+
 
         .news-insta {
             width: 100%;
-            height: 283px;
-            border: 1px solid;
+            min-height: 283px;
+
 
             .insta-title {
-                height: 53px;
+                min-height: 53px;
 
                 font-family: 'Roboto';
                 font-style: normal;
@@ -35,16 +35,16 @@
 
             .insta-group {
                 width: 100%;
-                height: 170px;
+                min-height: 170px;
                 display: flex;
                 margin-top: 60px;
                 align-items: center;
                 justify-content: space-between;
 
                 .insta-img {
-                    max-width: 170px;
+                    // max-width: 170px;
                     height: 100%;
-                    border: 1px solid;
+
                     cursor: pointer;
                     background-color: rgb(0, 0, 0) !important;
                     position: relative;
@@ -79,14 +79,14 @@
         }
 
         .news-letter {
-            height: 165px;
-            width: 766px;
+            min-height: 165px;
+            max-width: 766px;
             margin: 70px auto 0;
-            border: 1px solid;
+
 
             .letter-title {
                 width: 100%;
-                height: 53px;
+                min-height: 53px;
 
                 font-family: 'Roboto';
                 font-style: normal;
@@ -104,17 +104,17 @@
 
             .letter-form {
                 width: 100%;
-                height: 32px;
+                min-height: 32px;
                 margin-top: 80px;
                 display: flex;
-                border: 1px solid;
+
                 align-items: center;
                 justify-content: space-between;
 
                 .form-input {
                     width: 643px;
                     height: 100%;
-                    border: 1px solid;
+
 
                     input {
                         width: 100%;
@@ -133,7 +133,7 @@
                 .form-btn {
                     width: 90px;
                     height: 100%;
-                    border: 1px solid;
+
 
                     button {
                         width: 100%;
