--- a/src/pages/homeuser/SliderProducts/SliderProducts.scss
+++ b/src/pages/homeuser/SliderProducts/SliderProducts.scss
@@ -2,18 +2,18 @@
     width: 90vw;
     height: 600px;
     margin: 140px auto 0;
-    border: 1px solid;
+
 
     .slider-content {
         width: 100%;
         height: 100%;
-        border: 1px solid;
+
 
         .slider-title {
-            width: 332px;
+            max-width: 332px;
             height: 53px;
             margin: 0 auto 40px;
-            border: 1px solid;
+
 
             font-family: 'Roboto';
             font-style: normal;
@@ -32,15 +32,15 @@
             height: 32px;
             margin-top: 40px;
             display: flex;
-            border: 1px solid;
-            align-items: center;
+
+            // align-items: center;
             justify-content: space-between;
 
             .tabs {
-                width: 375px;
+                max-width: 375px;
                 height: 22px;
                 display: flex;
-                border: 1px solid;
+
                 justify-content: space-between;
 
                 .slider-tablinks {
@@ -51,7 +51,7 @@
                     font-family: "Open Sans";
                     font-style: normal;
                     font-weight: 600;
-                    font-size: 16px;
+                    font-size: 15px;
                     line-height: 22px;
                     text-transform: capitalize;
                     color: #777777;
@@ -94,7 +94,7 @@
             width: 100%;
             height: 440px;
             margin-top: 30px;
-            border: 1px solid;
+
 
             .slider-tabcontent {
                 width: 100%;
@@ -139,7 +139,7 @@
                         .card-product {
                             width: 272px;
                             height: 438px;
-                            border: 1px solid;
+
 
                             .img-product {
                                 position: relative;
@@ -362,5 +362,45 @@
         to {
             bottom: 0;
         }
+    }
+}
+
+//mobile
+@media only screen and (min-width: 320px) and (max-width: 480px) {
+    .sldier-title {
+        width: 100%;
+        font-size: 45px;
+    }
+
+    .slider-top {
+        flex-direction: column;
+    }
+}
+
+//tablet
+@media only screen and (min-width: 481px) and (max-width: 768px) {
+    .sldier-top {
+        align-items: center;
+    }
+}
+
+//laptop
+@media only screen and (min-width: 769px) and (max-width: 1023px) {
+    .sldier-top {
+        align-items: center;
+    }
+}
+
+//desktop
+@media only screen and (min-width: 1024px) and (max-width: 1200px) {
+    .sldier-top {
+        align-items: center;
+    }
+}
+
+//extra
+@media only screen and (min-width: 1201px) {
+    .sldier-top {
+        align-items: center;
     }
 }
