--- a/src/pages/homeuser/MainHome/BrandBanner/BrandBanner.scss
+++ b/src/pages/homeuser/MainHome/BrandBanner/BrandBanner.scss
@@ -2,7 +2,7 @@
     width: 100%;
     height: 776px;
     margin-top: 140px;
-    background-image: url(../../../assets/images/banner/banner.png);
+    background-image: url(../../../../assets/images/banner/banner.png);
     background-repeat: no-repeat;
     // background-position: 71%;
     // background-attachment: fixed;
