--- a/src/pages/homeuser/ListProduct/List/List.scss
+++ b/src/pages/homeuser/ListProduct/List/List.scss
@@ -14,6 +14,25 @@
                 width: 100%;
                 height: 100%;
 
+                .list-title {
+                    width: 100%;
+                    height: 53px;
+                    margin-bottom: 45px;
+
+                    font-family: 'Roboto';
+                    font-style: normal;
+                    font-weight: 500;
+                    font-size: 45px;
+                    line-height: 53px;
+                    /* identical to box height */
+
+                    text-align: center;
+                    letter-spacing: 0.1em;
+                    text-transform: capitalize;
+
+                    color: #000000;
+                }
+
                 .list-products {
                     width: 100%;
                     height: 100%;
@@ -114,6 +133,10 @@
                             height: 22px;
                             margin-top: 18px;
 
+                            text-overflow: ellipsis;
+                            overflow: hidden;
+                            white-space: nowrap;
+
                             font-family: 'Open Sans';
                             font-style: normal;
                             font-weight: 600;
@@ -133,8 +156,12 @@
                             justify-content: space-between;
 
                             .left-bot {
-                                width: 43px;
+                                width: 90px;
                                 height: 22px;
+
+                                text-overflow: ellipsis;
+                                overflow: hidden;
+                                white-space: nowrap;
 
                                 font-family: 'Open Sans';
                                 font-style: normal;
