finish product page, call api get product by id, link to home, link to product

--- a/src/pages/homeuser/MainHome/SliderProducts/SliderProducts.scss
+++ b/src/pages/homeuser/MainHome/SliderProducts/SliderProducts.scss
@@ -90,6 +90,10 @@
             }
         }
 
+        .slider-top-none {
+            display: none;
+        }
+
         .products {
             width: 100%;
             height: 440px;
