--- a/src/pages/homeuser/ListProduct/List/List.scss
+++ b/src/pages/homeuser/ListProduct/List/List.scss
@@ -102,6 +102,11 @@
                                         display: flex;
                                         align-items: center;
                                         justify-content: space-between;
+
+                                        a {
+                                            color: #FFFFFF;
+                                            height: 100%;
+                                        }
                                     }
 
                                     .action-product-right {
