--- a/src/layout/HomeLayout/Header/Header.scss
+++ b/src/layout/HomeLayout/Header/Header.scss
@@ -54,13 +54,21 @@
                 display: flex;
                 justify-content: space-between;
 
-
                 .account {
                     width: 45%;
                     display: flex;
                     align-items: center;
                     justify-content: space-evenly;
 
+                    text-decoration: none;
+
+                    font-family: 'Poppins';
+                    font-style: normal;
+                    font-weight: 400;
+                    font-size: 14px;
+                    line-height: 24px;
+
+                    color: #0B0B0B;
 
                     &:hover {
                         cursor: pointer;
@@ -72,6 +80,22 @@
                     display: flex;
                     align-items: center;
                     justify-content: space-evenly;
+
+                    a {
+                        text-decoration: none;
+
+                        font-family: 'Poppins';
+                        font-style: normal;
+                        font-weight: 400;
+                        font-size: 14px;
+                        line-height: 24px;
+                        /* identical to box height, or 171% */
+
+
+                        /* Main / Middle Black */
+
+                        color: #0B0B0B;
+                    }
 
 
                     &:hover {
