--- a/src/pages/homeuser/ListProduct/List/List.scss
+++ b/src/pages/homeuser/ListProduct/List/List.scss
@@ -40,14 +40,14 @@
 
                     .card-product {
                         max-width: 480px;
-                        height: 420px;
+                        height: fit-content;
 
 
                         .img-product {
                             position: relative;
                             cursor: pointer;
                             width: 100%;
-                            height: 360px;
+                            height: 300px;
                             overflow: hidden;
 
                             img {
