--- a/src/pages/homeuser/Cart/CartInfor/CartInfor.scss
+++ b/src/pages/homeuser/Cart/CartInfor/CartInfor.scss
@@ -24,6 +24,7 @@
                 .item-cart {
                     width: 100%;
                     height: 150px;
+                    border-bottom: 1px solid;
 
                     display: flex;
                     align-items: center;
