add product to cart

--- a/src/pages/homeuser/Product/ProductInfor/ProductInfor.scss
+++ b/src/pages/homeuser/Product/ProductInfor/ProductInfor.scss
@@ -9,8 +9,9 @@
         // border: 1px solid;
 
         .pro-image {
-            width: 100%;
+            width: 80%;
             height: 528px;
+            margin: auto;
 
             img {
                 width: 100%;
