--- a/src/pages/homeuser/Cart/CartInfor/CartInfor.scss
+++ b/src/pages/homeuser/Cart/CartInfor/CartInfor.scss
@@ -41,15 +41,15 @@
                     }
 
                     .infor-item {
-                        height: 75px;
-                        width: 150px;
+                        min-height: 75px;
+                        width: 400px;
                         display: flex;
                         flex-direction: column;
                         justify-content: space-between;
 
                         .infor-title {
                             width: 100%;
-                            height: 22px;
+                            min-height: 22px;
 
                             font-family: 'Bebas Neue';
                             font-style: normal;
