total cart function, custom product card, show avatar, user name when login, show amount of product in cart

--- a/src/layout/HomeLayout/Header/Header.scss
+++ b/src/layout/HomeLayout/Header/Header.scss
@@ -84,6 +84,7 @@
                         /* Main / Middle Black */
 
                         color: #0B0B0B;
+                        text-align: center;
                     }
 
                     &:hover {
