--- a/src/pages/homeuser/ListProduct/List/List.scss
+++ b/src/pages/homeuser/ListProduct/List/List.scss
@@ -114,7 +114,7 @@
                                         height: 24px;
                                         display: flex;
                                         align-items: center;
-                                        justify-content: space-around;
+                                        justify-content: flex-end;
 
                                         font-family: "Roboto";
                                         font-style: normal;
@@ -122,6 +122,10 @@
                                         font-size: 18px;
                                         line-height: 21px;
                                         text-transform: capitalize;
+
+                                        button {
+                                            color: #FFFFFF;
+                                        }
                                     }
                                 }
                             }
