--- a/src/pages/homeuser/Cart/CartInfor/CartInfor.scss
+++ b/src/pages/homeuser/Cart/CartInfor/CartInfor.scss
@@ -18,6 +18,9 @@
 
             .items-cart {
                 display: flex;
+                max-height: 600px;
+                border-bottom: 1px solid;
+                overflow-y: overlay;
                 flex-direction: column;
 
 
@@ -25,6 +28,7 @@
                     width: 100%;
                     height: 200px;
                     border-bottom: 1px solid;
+                    transition: 0.5s ease;
 
                     display: flex;
                     align-items: center;
