--- a/src/pages/LoginReg/Login/Login.scss
+++ b/src/pages/LoginReg/Login/Login.scss
@@ -158,7 +158,7 @@
                             border-bottom: 1px solid rgba(255, 255, 255, 0.2);
                             font-size: 16px;
                             letter-spacing: 1px;
-                            color: #FFFFFF;
+                            color: #777777;
                             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
 
                             &::placeholder {
@@ -174,6 +174,10 @@
                             margin-bottom: 20px;
                             font-weight: 600;
                         }
+                    }
+
+                    .error {
+                        color: #ff3564;
                     }
 
                     .signup {
