--- a/src/pages/homeuser/Cart/CartInfor/CartInfor.scss
+++ b/src/pages/homeuser/Cart/CartInfor/CartInfor.scss
@@ -50,7 +50,7 @@
                         word-wrap: break-word;
                         display: flex;
                         flex-direction: column;
-                        justify-content: space-between;
+                        justify-content: space-evenly;
 
                         .infor-title {
                             width: 100%;
@@ -170,7 +170,7 @@
 
         .payment-container {
             width: 100%;
-            height: 260px;
+            height: 150px;
             display: flex;
             flex-direction: column;
 
