fix picture product card

--- a/src/pages/homeuser/Product/ProductInfor/ProductInfor.scss
+++ b/src/pages/homeuser/Product/ProductInfor/ProductInfor.scss
@@ -30,12 +30,12 @@
             height: 528px;
 
             .title-infor {
-                width: 317px;
+                width: 400px;
                 height: 54px;
 
                 text-overflow: ellipsis;
                 overflow: hidden;
-                white-space: nowrap;
+                // white-space: nowrap;
 
                 font-family: 'Open Sans';
                 font-style: normal;
